Style up and finish functionality of the gallery pages.  Almost done!

--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -60,21 +60,175 @@
 }
 
 /* ------------------------------------
-   GALLERIES
+   GALLERY & GALLERY VIEW PANEL
 -------------------------------------*/
 
 .galleryPanel .clickBox {
   float: left;
 }
 
-.galleryViewPanel, .galleryEditPanel {
+.galleryViewPanel {
   width: 100%;
   height: 100%;
   min-height: 550px;
-  background: #509BD2 url(/images/group/detail_bg.png) repeat-x;
+  background-color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
-.galleryViewPanel .Thumbnail,
+.galleryViewPanel .Error {
+  color: #24598d;
+  padding-top: 30px;
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 35px;
+}
+
+.galleryViewPanel .Actions {
+  color: #247393;
+  margin-left: 10px;
+}
+
+.galleryViewPanel .Actions .actionLabel {
+  text-decoration: none;
+}
+
+.galleryViewPanel .Thumbnail {
+  margin: 10px 0 0 8px;
+  float: left;
+  text-decoration: none;
+}
+
+.galleryViewPanel .Thumbnail .Image img {
+  border: 1px solid #CCCCCC;
+}
+
+.galleryViewPanel .Thumbnail .Name {
+  color: #888888;
+  font-size: 11px;
+  width: 160px;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-top: 5px;
+}
+
+.galleryViewPanel .CurrentPhoto {
+  width: 100%;
+  height: 460px;
+  margin-top: 10px;
+}
+
+.galleryViewPanel .CurrentPhoto .FullPhotoName {
+  color: #247393;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.galleryViewPanel .CurrentPhoto .FullPhoto {
+  width: 100%;
+  text-align: center;
+}
+.galleryViewPanel .CurrentPhoto .FullPhoto img {
+  border: 1px solid #CCCCCC;
+}
+
+/* ------------------------------------
+   GALLERY DETAILS PANEL (VIEW & EDIT)
+-------------------------------------*/
+
+.galleryDetailPanel {
+  background: url(/images/people/gallery_details_box.png) no-repeat;
+  width: 666px;
+  height: 99px;
+  margin: 10px 0 10px 10px;
+}
+
+.galleryDetailPanel .GalleryThumbnail {
+  border: 2px solid #666666;
+  background-color: #FFFFFF;
+  text-align: center;
+  background-color: #E1E1E1;
+  color: #a8a8a8;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: center;
+}
+
+.galleryDetailPanel .Count {
+  color: #24598d;
+}
+
+.galleryDetailPanel .NameAndCreator {
+  width: 540px;
+  height: 30px;
+  overflow: hidden;
+}
+
+.galleryDetailPanel .Name {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #247393;
+  font-size: 24px;
+}
+
+.galleryDetailPanel .creator, 
+.galleryDetailPanel .creator a {
+  color: #154676;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.galleryDetailPanel .Description {
+  color: #247393;
+  background-color: white;
+  width: 540px;
+  height: 40px;
+  padding: 5px;
+  overflow-y: auto;
+}
+
+/* ------------------------------------
+   GALLERY EDIT PANEL
+-------------------------------------*/
+
+.galleryEditPanel {
+  width: 100%;
+  height: 100%;
+  min-height: 650px;
+  background-color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+.galleryEditPanel .galleryDetailPanel .Name {
+  color: #24598d;
+  font-size: 14px;
+  width: 300px;
+  height: 20px;
+}
+
+.galleryEditPanel .galleryDetailPanel .Description {
+  background: none;
+}
+
+.galleryEditPanel .galleryDetailPanel .Description .gwt-TextArea {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #74a7c2;
+  font-size: 14px;
+  width: 440px;
+  height: 45px;
+}
+
+.galleryEditPanel .galleryDetailPanel .Description .tipLabel {
+  display: none;
+}
+
 .galleryEditPanel .Thumbnail {
   margin: 10px 10px 0 0;
   float: left;
@@ -84,7 +238,6 @@
   text-align: center;
 }
 
-.galleryViewPanel .Thumbnail .Name,
 .galleryEditPanel .Thumbnail .Name {
   font-size: 9px;
   width: 80px;
@@ -95,112 +248,20 @@
   margin-top: 5px;
 }
 
-.galleryViewPanel .Error {
-  color: #FFFFFF;
-  padding-top: 30px;
-  text-align: center;
-}
-
-.galleryViewPanel .CurrentPhoto {
-  width: 100%;
-  height: 100%;
-}
-
-.galleryViewPanel .GreyMask {
-  width: 100%;
-  height: 100%;
-  background-color: #000000;
-  filter: alpha(opacity=50);
-  -moz-opacity: .50;
-  opacity: .50;
-}
-
-.galleryViewPanel .FullSize {
-  width: 100%;
-  height: 100%;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  color: #FFFFFF;
-  text-align: center;
-}
-
-.galleryViewPanel .FullSize .Photo {
-  margin: 0 auto;
-  background-color: #000000;
-  border: solid #000000 10px;
-}
-
-.galleryViewPanel .FullSize .Name {
-  margin-top: 10px;
-  font-size: 20px;
-}
-
-.galleryViewPanel .FullSize .Description {
-  margin-top: 7px;
-  font-size: 15px;
-}
-
-.galleryDetailPanel {
-  background: url(/images/people/gallery_details_box.png) no-repeat;
-  width: 200px;
-  height: 320px;
-  margin: 10px 0 0 10px;
-  padding: 5px;
-}
-
-.galleryDetailPanel .GalleryThumbnail {
-  margin: 0;
-  float: none;
-  border: 1px solid #000000;
-  background-color: #FFFFFF;
-  padding: 5px;
-  text-align: center;
-}
-
-/* Styles both static divs and input boxes */
-.galleryDetailPanel .Name,
-.galleryDetailPanel .Description,
-.galleryDetailPanel .Description .gwt-TextArea {
-  width: 180px;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  color: #24598d;
-}
-
-.galleryDetailPanel .Name {
-  height: 35px;
-  font-size: 18px;
-  overflow: hidden;
-}
-
-.galleryDetailPanel .Description {
-  height: 120px;
-  font-size: 15px;
-}
-
-.galleryDetailPanel .Description .gwt-TextArea {
-  height: 105px;
-  font-size: 15px;
-}
-
 .galleryEditPanel .dropPanel {
-  background: #BBDDFF;
-  width: 425px;
-  height: 375px;
-  padding: 5px;
+  border-top: 3px solid #a3c4d5;
+  border-bottom: 3px solid #a3c4d5;
+  background: #d3e2e9;
+  width: 655px;
+  height: 220px;
+  padding: 5px 0 5px 30px;
   overflow-y: scroll;
 }
 
-.payload,
-.payload  DIV {
-  background: #FFFFFF;
+.galleryEditPanel .payload,
+.galleryEditPanel .payload  DIV {
   float: left;
-  height: 80px;
-  width: 80px;
   margin: 10px 0 0 10px;
-  padding: 5px;
-  text-align: center;
-  border: 1px solid #000000;
 }
 
 .galleryEditPanel .dropPanel .payload  IMG {
@@ -208,13 +269,47 @@
   vertical-align: middle;
 }
 
-.dragdrop-movable-panel DIV,
-.dragdrop-movable-panel IMG {
+.galleryEditPanel .dragdrop-movable-panel DIV,
+.galleryEditPanel .dragdrop-movable-panel IMG {
   filter: alpha(opacity = 60);
   opacity: 0.6;
 }
 
-.galleryEditPanel .Contents {
-  height: 80px;
-  width: 625px;
+.galleryEditPanel .DragInstructions {
+  color: #74a7c2;
+  font-size: 14px;
+  width: 300px;
+  text-align: center;
+}
+
+.galleryEditPanel .DragInstructions .DragInstructions1 {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.galleryEditPanel .ThumbnailImage {
+  border: 1px solid #CCCCCC;
+  background-color: #FFFFFF;
+  width: 90px;
+  height: 70px;
+}
+
+.galleryEditPanel .PhotoList {
+  width: 660px;
+  padding-left: 40px;
+  height: 360px;
+  background: #FFFFFF url(/images/people/gallery_photo_list_bg.png) repeat-x;
+}
+
+.galleryEditPanel .PhotoList .PrevNextButtons {
+  margin: 20px 0 15px 520px;
+}
+
+.galleryEditPanel .PhotoListTitle {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #5491bd;
+  font-size: 24px;
 }
