--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -174,7 +174,8 @@
 
 .listingDetailPanel .Info {
   margin-left: auto;
-  font-size: 13px;
+  margin-top: 10px;
+  font-size: x-small;
 }
 
 .listingDetailPanel .Info .What {
