--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -952,6 +952,7 @@ img, embed, applet, object {
 .orangeThick .W, .orangeThick .E, .blueThick .W, .blueThick .E {
   width: 36px;
   height: 44px;
+  display: block;
 }
 
 /** ORANGE BUTTON */
