Updated remix-before-you-buy to work with the new buying mechanism.

--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -149,6 +149,11 @@
   margin-bottom: 5px;
 }
 
+.buyRemixPanel {
+  width: 320px;
+  padding: 15px 15px 15px 15px;
+}
+
 .catalogPanel .pagedGrid .Header .SortBy {
   width: 50px;
   padding-right: 5px;
