VerticalPanel is evil. Don't use it. Use a FlowPanel. Also don't use "width: 100% and width: 0" that's wack. I also put some space below the bar tip and wrapped and centered the text nicely. Being a programmer is no excuse for ignoring basic aesthetic considerations.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -427,7 +427,6 @@
 
 .transactions {
   padding: 15px;
-  width: 100%;
 }
 
 .transactions .roundBox {
@@ -435,8 +434,9 @@
 }
 
 .BarsTip {
-  width: 0;
   font-size: small;
+  text-align: center;
+  padding-bottom: 5px;
 }
 
 .Balance {
