--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -150,8 +150,8 @@
 }
 
 .buyRemixPanel {
-  width: 320px;
-  padding: 15px 15px 15px 15px;
+  width: 300px;
+  padding: 15px;
 }
 
 .catalogPanel .pagedGrid .Header .SortBy {
