Have the link to a whirled's discussions be "<name> Discussions" and the link to the whirled's detail page just be "<name>" instead of the other way around.

--- a/src/gwt/public/msgs/msgs.css
+++ b/src/gwt/public/msgs/msgs.css
@@ -17,14 +17,14 @@
   font-size: 14px;
 }
 
+.titledListPanel .Header a {
+  white-space: nowrap;
+  color: #FFFFFF;
+}
+
 .titledListPanel .Header .Whirled {
   padding-left: 5px;
   width: 50px;
-}
-
-.titledListPanel .Header .Whirled a {
-  white-space: nowrap;
-  color: #FFFFFF;
 }
 
 .titledListPanel .Header .RSS {
