Add "floatleft" class for making elements run in a line.  Used by thte FloatPanel class in threerings-gwt

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -913,6 +913,10 @@ img, embed, applet, object {
   width: 400px;
 }
 
+.floatleft {
+  float: left;
+}
+
 /** Place <div style="clear"/> to force a line break after floating elements */
 .clear {
   clear: both;
