Three fixes: - GalleryPhotoPanel wasn't using GalleryPanel.getGalleryLabel and was thus showing "" for the title of the profile gallery; - the name of the photo is the important thing on the photo detail page, not the name of the gallery; - the name of the gallery and the creator's name were both linking back to the gallery even though the gallery name was not underlined and the creator's name was a hyperlink that claimed to be going to the creator's profile even though the mouse click was intercepted and sent the user to the profile page.

--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -129,28 +129,27 @@
   min-height: 500px;
 }
 
+.galleryPhotoPanel .PhotoName {
+  color: #247393;
+  font-size: 16px;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding: 5px 0px 0px 20px;
+}
+
 .galleryPhotoPanel .NameAndCreator {
-  margin: 0 0 5px 20px;
-  padding-top: 10px;
+  margin: 0px 0px 10px 20px;
+  font-size: 12px;
 }
 
 .galleryPhotoPanel .NameAndCreator .GalleryName {
   color: #247393;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: 24px;
 }
 
 .galleryPhotoPanel .NameAndCreator .creator, 
 .galleryPhotoPanel .NameAndCreator .creator a {
   color: #7799A5;
-  font-size: 14px;
-}
-
-.galleryPhotoPanel .PhotoName {
-  color: #247393;
-  font-size: 16px;
-  margin: 5px 0 5px 20px;
 }
 
 .galleryPhotoPanel .LargePhoto {
