--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -99,6 +99,10 @@
   line-height: 35px;
 }
 
+.galleryViewPanel .GalleryViewContainer {
+  padding-top: 10px;
+}
+
 .galleryViewPanel .Actions {
   color: #247393;
   margin-left: 10px;
@@ -180,7 +184,7 @@
   background: url(/images/people/gallery_details_box.png) no-repeat;
   width: 666px;
   height: 99px;
-  margin: 10px 0 10px 10px;
+  margin: 0 0 10px 10px;
 }
 
 .galleryDetailPanel .GalleryThumbnail {
