Stamp name text centered, per Jon.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -347,7 +347,7 @@
   color: #1c4c74;
   font-weight: bold;
   font-size: 12px;
-  text-align: left;
+  text-align: center;
   line-height: 12px;
 }
 
