--- a/src/gwt/public/landing/landing.css
+++ b/src/gwt/public/landing/landing.css
@@ -459,3 +459,26 @@
 .creatorsPanel .GetStartedButton-up-hovering {
   background: transparent url(/images/landing/get_started_button_over.png);
 }
+
+/* ------------------------------------
+   DEVIANT ART CONTEST LANDING
+-------------------------------------*/
+
+/* Spans the entire width of the page */
+.daContestPanel {
+  background-color: #000000;
+  width: 100%;
+  height: 1840;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+
+/* Spans the entire width of the page */
+.daContestPanel .Content {
+  width: 1024px;
+  height: 1840px;
+  margin: auto;
+}
