--- a/src/gwt/public/editem/editem.css
+++ b/src/gwt/public/editem/editem.css
@@ -5,6 +5,57 @@
  */
 
 .itemEditor {
-  margin: 5px;
+  background-color: #195f85;
+  min-height: 100%;
+  width: 100%;
+}
+
+.itemEditor .RoundedTop {
+  padding-top: 15px;
+  margin: auto;
+}
+
+.itemEditor .Header {
   width: 670px;
+  height: 80px;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+.itemEditor .Header .Title {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #154D72;
+  font-size: 24px;
+}
+
+.itemEditor .Header .WikiLink {
+  font-size: 15px;
+  text-align: right;
+  width: 400px;
+}
+.itemEditor .Header .WikiLink,
+.itemEditor .Header .WikiLink a {
+  color: #779AB0;
+}
+
+.itemEditor .Header .Blurb {
+  font-size: 13px;
+  width: 620px;
+}
+.itemEditor .Header .Blurb,
+.itemEditor .Header .Blurb a {
+  color: #154D72;
+}
+
+.itemEditor .Content {
+  margin: auto;
+  width: 670px;
+  background-color: #ffffff;
+  padding: 10px;
+}
+
+.itemEditor .RoundedBottom {
+  padding-bottom: 10px;
+  margin: auto;
 }
