--- a/src/gwt/public/editem/editem.css
+++ b/src/gwt/public/editem/editem.css
@@ -59,3 +59,10 @@
   padding-bottom: 10px;
   margin: auto;
 }
+
+.itemEditor .ItemPreview {
+  background-image: url(/images/item/detail_preview_bg.png);
+  width: 160px;
+  height: 120px;
+  border: 1px solid #000000;
+}
